--- a/source/index.html
+++ b/source/index.html
@@ -28,8 +28,8 @@
 
   <div class="helloText">USD/BTC</div>
 
-  <script src="../bower_components/d3/d3.min.js"></script>
-
+  <script src="scripts/vendor/d3/d3.min.js"></script>
+  <script src="scripts/rates.js"></script>
 </body>
 
 </html>
