--- a/source/index.html
+++ b/source/index.html
@@ -2,84 +2,18 @@
 
 <head>
 
-<style>
-
-	body {
-		margin: 0;
-    font: 10px sans-serif;
-
-    width: 400px;
-    height: 300px;
-
-    background-color: transparent;
-  }
-
-  #container {
-    background: #212121; /* Old browsers */
-    background: -moz-linear-gradient(top,  #212121 0%, #494949 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#212121), color-stop(100%,#494949)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #212121 0%,#494949 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #212121 0%,#494949 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #212121 0%,#494949 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  #212121 0%,#494949 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#212121', endColorstr='#494949',GradientType=0 ); /* IE6-9 */
-
-    border-radius: 10px;
-    border: 1.5px solid white;
-
-    width: 397px;
-    height: 297px;
-  }
-
-  text {
-    color: #bbb;
-    stroke: #bbb;
-  }
-
-  .axis path,
-  .axis line {
-    fill: none;
-    stroke: #bbb;
-    shape-rendering: crispEdges;
-  }
-
-  .x.axis path {
-    display: none;
-  }
-
-  .line {
-    fill: none;
-    stroke: #7d9;
-    stroke-width: 1.5px;
-  }
-
-  div#debug {
-    /* we hide the debug div by default */
-    display: none;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    padding: 10px;
-    width: 300px;
-    background: #ccc;
-    color: white;
-    border: solid 1px black;
-  }
-
-</style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
 <body>
 
   <div id="container">
-    <svg id="svg"></svg>
-    <div id="debug"></div>
   </div>
 
   <script src="scripts/vendor/d3/d3.min.js"></script>
   <script src="scripts/rates.js"></script>
-  <script src="scripts/debug.js"></script>
+
 </body>
 
 </html>
