--- a/source/index.html
+++ b/source/index.html
@@ -4,15 +4,17 @@
 
   <link rel="stylesheet" type="text/css" href="styles.css">
 
+  <script type="text/javascript" charset="utf-8" src="d3.min.js"></script>
+  <script type="text/javascript" charset="utf-8" src="rates.js"></script>
+
 </head>
 
-<body>
+<body onload="init()">
 
   <div id="container">
+    TEST
   </div>
 
-  <script src="scripts/vendor/d3/d3.min.js"></script>
-  <script src="scripts/rates.js"></script>
 
 </body>
 
