--- a/source/index.html
+++ b/source/index.html
@@ -4,14 +4,18 @@
 
   <link rel="stylesheet" type="text/css" href="styles.css">
 
-  <script type="text/javascript" charset="utf-8" src="d3.min.js"></script>
-  <script type="text/javascript" charset="utf-8" src="rates.js"></script>
+  <script type="text/javascript" charset="utf-8" src="scripts/vendor/d3/d3.min.js"></script>
+  <script type="text/javascript" charset="utf-8" src="scripts/rates.js"></script>
 
 </head>
 
 <body onload="init()">
 
-  <div id="container"></div>
+  <div id="container">
+
+    <div id="readout"></div>
+
+  </div>
 
 </body>
 
