--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 
   <script type="text/javascript" charset="utf-8" src="scripts/vendor/d3/d3.min.js"></script>
+  <script type="text/javascript" charset="utf-8" src="scripts/vendor/numbers/numbers.js"></script>
   <script type="text/javascript" charset="utf-8" src="scripts/rates.js"></script>
 
 </head>
