--- a/source/index.html
+++ b/source/index.html
@@ -14,6 +14,8 @@
 
   <div id="container">
 
+    <button id="mode-button" onclick="modeClicked()">MODE</button>
+
     <div id="readout"></div>
 
   </div>
